enquiry list complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,19 @@
-<div>
-  <h1>Enquiry Management</h1>
+<div >
+  <div style="text-align: center;">
+    <h1>Training Academy CRM</h1>
+  </div>
+
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a href="" class="navbar-brand">Home</a>
+    <a href="/enquiry" class="navbar-brand">Enquiry Management</a>
+  </nav>
+
+  <div>
+
+    <!-- <app-employee></app-employee> -->
+    <!-- <app-home></app-home> -->
+
+  </div>
+
 </div>
 <router-outlet></router-outlet>
