--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,12 @@
-<div >
+<!-- <div>
   <div style="text-align: center;">
     <h1>Training Academy CRM</h1>
   </div>
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a href="" class="navbar-brand">Home</a>
-    <a href="/enquiry" class="navbar-brand">Enquiry Management</a>
+    <a routerLink="/coordinator" class="navbar-brand">Coordinator Dashboard</a>
   </nav>
-
-  <div>
-
-    <!-- <app-employee></app-employee> -->
-    <!-- <app-home></app-home> -->
-
-  </div>
-
-</div>
+</div> -->
+<app-coordinator></app-coordinator>
 <router-outlet></router-outlet>
